# conmech3d

./: pyproject.toml
conmech/helpers/: cmh.py  config.py  pca.py
conmech/plotting/: plotter_functions.py
conmech/scenarios/: scenarios.py
conmech/scene/: energy_functions.py
conmech/simulations/: simulation_runner.py
conmech/solvers/: calculator.py
deep_conmech/: training_config.py
deep_conmech/graph/: model_jax.py  net_jax.py
deep_conmech/scene/: scene_input.py
examples/: draft_compare.py  draft_presentation.py  examples_3d.py
