[tool.poetry]
name = "conmech3d"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jax = {version = "0.4.34", extras = ["cuda12"]} # cuda12_local
# nvidia-cudnn-cu12 = "9.1.1.17"
# jaxlib = {version = "0.4.28", extras = ["cuda12-cudnn89"], source = "jax_cuda_releases"}
# numpy = "1.26.4"
# jaxlib = {version = "0.4.28", extras = ["cuda12"]}
numba = "^0.60.0"
python-dotenv = "^1.0.1"
cython = "^3.0.11"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
networkx = "^3.4.1"
gmsh = "^4.13.1"
pygmsh = "^7.1.17"
dmsh = "^0.3.4"
meshzoo = "^0.11.6"
tqdm = "^4.66.5"
psutil = "^6.1.0"
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"
pytest-env = "^1.1.5"
pandas = "^2.2.3"
flax = "^0.10.0"
torch-geometric = "^2.6.1"
tensorflow = "^2.18.0"
multiprocess = "^0.70.17"
torch = {version = "^2.5.1", source="torchcpu"}


# [[tool.poetry.source]]
# name = "jax_cuda_releases"
# url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
# priority = "explicit"


[[tool.poetry.source]]
name = "torchcpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"